<resources>
    <string name="app_name">Skinflint</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_transactions_list">TransactionsListActivity</string>

    <string name="transaction_new">New transaction</string>
    <string name="transaction_name">Name</string>
    <string name="transaction_desc">Description</string>
    <string name="transaction_value">Value</string>
    <string name="transaction_currency">Currency</string>
    <string name="transaction_date">Date</string>
    <string name="transaction_time">Time</string>

    <string name="confirm_transaction_delete_title">Delete transaction</string>
    <string name="confirm_transaction_delete_msg">Transaction will be removed</string>

    <string name="done">Done</string>
    <string name="ok">@android:string/ok</string>
    <string name="delete">Delete</string>
    <string name="cancel">@android:string/cancel</string>

    <string name="form_error_empty">Field cannot be empty</string>
    <string name="form_error_invalid_value">Value is invalid</string>
</resources>
